--- a/main.html
+++ b/main.html
@@ -4,23 +4,51 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+    }
+    form {
+        width: 300px;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        background-color: #f9f9f9;
+    }
+    input[type="text"],
+    input[type="password"],
+    input[type="submit"] {
+        width: 100%;
+        padding: 10px;
+        margin: 5px 0;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+        box-sizing: border-box;
+    }
+    input[type="checkbox"] {
+        margin-right: 5px;
+    }
+</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Login Form</h1>
+	
     <form id="loginForm">
-        <label for="username">Username:</label>
-        <input type="text" id="username" placeholder="Username" required>
-        <br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" placeholder="Password" required>
-        <br>
-        <input type="checkbox" id="checkbox">
-        <label for="checkbox">Remember me</label>
-        <br>
-        <input type="submit" id="submit" value="Submit">
-    </form>
+	    <h1>Login Form</h1>
+	    <label for="username">Username:</label>
+	    <input type="text" id="username" placeholder="Username">
+	    <label for="password">Password:</label>
+	    <input type="password" id="password" placeholder="Password">
+	    <label><input type="checkbox" id="checkbox"> Remember me</label>
+	    <input type="submit" id="submit" value="Submit">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
